# Nexus

./: .env.example  .gitignore  Bugs.md  CodeReview.md  DEPLOYMENT_RENDER_SIDECAR.md  ManualFindings.txt  NEXUS_CONCEPT_PITCH_PROMPT.md  NEXUS_POWERPOINT_PROMPT.md  NEXUS_TOOL_TEST_REPORT.md  Nexus-Diagrams.md  Nexus-Pitch-Deck_4 - Copy2.pptx  Nexus_PRD.md  Nexus_PRD_extension.md  PREREQUISITES.md  README.md  TOOLS.md  Tester.md  Testing.md  ToDo.md  claude.md  docker-compose.yml  run.md
backend/: .env.example  Dockerfile  _diagram_driver.py  _icon_swap.py  _tooltest.py  alembic.ini  probe5.py  pyproject.toml  requirements.txt
backend/app/: config.py  deps.py  main.py  phases.py
backend/bundles/: README.md
backend/kb_data/: kb_index.json
backend/output/: front-door-architecture.drawio  front-door-architecture.xml  spoke-appgw-hub-webapp.drawio  try3.drawio
backend/output copy/: allowed.drawio  nexus-drill1-chat-turn-lifecycle.dot  nexus-drill1-chat-turn-lifecycle.py  nexus-drill2-tool-approval.dot  nexus-drill2-tool-approval.py  nexus-drill3-kb-hybrid-retrieval.dot  nexus-drill3-kb-hybrid-retrieval.drawio  nexus-drill3-kb-hybrid-retrieval.py  nexus-drill4-learnings-defense.dot  nexus-drill4-learnings-defense.drawio  nexus-drill4-learnings-defense.py  nexus-drill5-skills-rbac.dot  nexus-drill5-skills-rbac.drawio  nexus-drill5-skills-rbac.py  nexus-l1-backend.dot  nexus-l1-backend.drawio  nexus-l1-backend.py
backend/scripts/: dump_conv.py  gen_font_advances.py  kb_hybrid_eval.py  kb_hybrid_eval_50.py  kb_hybrid_eval_50_results.json  kb_search_eval.py
(+363 files in other folders)
